@@ -32,6 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade django~=${{ matrix.django-version }}
+          python -m pip install --upgrade django-db-mutex
           python -m pip install --upgrade requests
 
       - name: Run tests
